--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
     <title>Monitorowanie zużycia gazu i prądu</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jspdf"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jspdf-autotable"></script>
     <style>
-        /* Ustawienia dla całego tła */
+        /* Stylowanie strony */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -21,7 +18,6 @@
             position: relative;
         }
 
-        /* Dodaj ciemny overlay z 50% przezroczystością */
         body::before {
             content: '';
             position: fixed;
@@ -30,13 +26,13 @@
             width: 100%;
             height: 100%;
             background-color: rgba(0, 0, 0, 0.5); /* 50% przyciemnienie */
-            z-index: -1; /* Umieść za treścią */
+            z-index: -1;
         }
 
         .container {
             max-width: 1000px;
             margin: 0 auto;
-            background-color: rgba(255, 255, 255, 0.8); /* Tło pod tekstem o 80% przejrzystości */
+            background-color: rgba(255, 255, 255, 0.8);
             padding: 20px;
         }
 
@@ -44,19 +40,10 @@
             margin-bottom: 1em;
         }
 
-        label {
-            display: block;
-            margin-bottom: 0.5em;
-        }
-
         input, button {
             width: 100%;
             padding: 0.5em;
             margin-bottom: 1em;
-        }
-
-        button {
-            padding: 0.5em 1em;
         }
 
         .buttons {
@@ -137,7 +124,6 @@
             <input type="date" id="endDate">
         </div>
         <button onclick="filterAndUpdateCharts()">Filtruj dane</button>
-        <button onclick="exportToPDF()">Eksportuj do PDF</button>
 
         <!-- Wykresy -->
         <h2>Wykres zużycia gazu i prądu</h2>
@@ -146,24 +132,25 @@
         <h2>Wykres dziennego zużycia gazu i prądu</h2>
         <canvas id="dailyUsageChart"></canvas>
 
-        <!-- Przefiltrowane wykresy -->
-        <h2>Wykres zużycia gazu i prądu (przefiltrowane)</h2>
-        <canvas id="filteredUsageChart"></canvas>
-
-        <h2>Wykres dziennego zużycia gazu i prądu (przefiltrowane)</h2>
-        <canvas id="filteredDailyUsageChart"></canvas>
-
         <!-- Tabele -->
         <h2>Tabela zużycia</h2>
         <div class="tables-container">
             <div class="table-wrapper" id="dataTable"></div>
-            <div class="table-wrapper" id="filteredDataTable"></div>
         </div>
     </div>
+
     <script>
-        function excelDateToJSDate(excelDate) {
-            const date = new Date((excelDate - 25569) * 86400 * 1000);
-            return date.toISOString().split('T')[0];
+        async function loadCSVData() {
+            const response = await fetch('https://raw.githubusercontent.com/car0tek/liczniki/main/LICZNIKI%20(1).csv');
+            const csvData = await response.text();
+
+            const parsedData = csvData.split('\n').slice(1).map(row => {
+                const [date, gas, electricity] = row.split(',');
+                return { date, gas: parseFloat(gas), electricity: parseFloat(electricity) };
+            });
+
+            localStorage.setItem('usageData', JSON.stringify(parsedData));
+            updateCharts();
         }
 
         function saveData() {
@@ -229,7 +216,7 @@
             const gasData = [];
             const electricityData = [];
             const labels = [];
-            
+
             let prevGas = 0;
             let prevElectricity = 0;
 
@@ -264,35 +251,24 @@
                         {
                             label: 'Zużycie gazu',
                             data: gasData,
-                            borderColor: 'rgba(255, 159, 64, 1)',
-                            backgroundColor: 'rgba(255, 159, 64, 0.2)',
-                            fill: true,
+                            borderColor: 'rgba(255, 99, 132, 1)',
+                            backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                            fill: false,
                         },
                         {
                             label: 'Zużycie prądu',
                             data: electricityData,
-                            borderColor: 'rgba(75, 192, 192, 1)',
-                            backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                            fill: true,
+                            borderColor: 'rgba(54, 162, 235, 1)',
+                            backgroundColor: 'rgba(54, 162, 235, 0.2)',
+                            fill: false,
                         }
                     ]
-                },
-                options: {
-                    responsive: true,
-                    scales: {
-                        y: {
-                            beginAtZero: true
-                        },
-                        x: {
-                            display: true
-                        }
-                    }
                 }
             });
 
             const dailyUsageChartCtx = document.getElementById('dailyUsageChart').getContext('2d');
             new Chart(dailyUsageChartCtx, {
-                type: 'line',
+                type: 'bar',
                 data: {
                     labels: labels.slice(1),
                     datasets: [
@@ -301,198 +277,55 @@
                             data: dailyGasUsage,
                             borderColor: 'rgba(255, 159, 64, 1)',
                             backgroundColor: 'rgba(255, 159, 64, 0.2)',
-                            fill: true,
                         },
                         {
                             label: 'Dzienne zużycie prądu',
                             data: dailyElectricityUsage,
                             borderColor: 'rgba(75, 192, 192, 1)',
                             backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                            fill: true,
                         }
                     ]
-                },
-                options: {
-                    responsive: true,
-                    scales: {
-                        y: {
-                            beginAtZero: true
-                        },
-                        x: {
-                            display: true
-                        }
-                    }
                 }
             });
 
-            updateTable(data, 'dataTable');
+            const tableContainer = document.getElementById('dataTable');
+            tableContainer.innerHTML = generateTableHTML(data);
         }
 
-        function updateTable(data, tableId) {
-            const table = document.getElementById(tableId);
-            table.innerHTML = '';
+        function generateTableHTML(data) {
+            let tableHTML = '<table><thead><tr><th>Data</th><th>Stan licznika gazu</th><th>Stan licznika prądu</th><th>Dzienne zużycie gazu</th><th>Dzienne zużycie prądu</th></tr></thead><tbody>';
+            for (let i = 0; i < data.length; i++) {
+                const prevData = data[i - 1] || { gas: 0, electricity: 0 };
+                const dailyGasUsage = data[i].gas - prevData.gas;
+                const dailyElectricityUsage = data[i].electricity - prevData.electricity;
 
-            if (data.length === 0) {
-                table.innerHTML = '<p>Brak danych do wyświetlenia.</p>';
-                return;
+                tableHTML += `<tr><td>${data[i].date}</td><td>${data[i].gas}</td><td>${data[i].electricity}</td><td>${dailyGasUsage}</td><td>${dailyElectricityUsage}</td></tr>`;
             }
-
-            let tableHTML = '<table><thead><tr><th>Data</th><th>Zużycie gazu</th><th>Zużycie prądu</th><th>Dzienne zużycie gazu</th><th>Dzienne zużycie prądu</th></tr></thead><tbody>';
-            let prevGas = 0;
-            let prevElectricity = 0;
-
-            data.forEach((entry, index) => {
-                const dailyGas = index > 0 ? (entry.gas - data[index - 1].gas) : 0;
-                const dailyElectricity = index > 0 ? (entry.electricity - data[index - 1].electricity) : 0;
-                tableHTML += `<tr><td>${entry.date}</td><td>${entry.gas}</td><td>${entry.electricity}</td><td>${dailyGas}</td><td>${dailyElectricity}</td></tr>`;
-                prevGas = entry.gas;
-                prevElectricity = entry.electricity;
-            });
             tableHTML += '</tbody></table>';
+            return tableHTML;
+        }
 
-            table.innerHTML = tableHTML;
+        function excelDateToJSDate(excelDate) {
+            const date = new Date((excelDate - (25567 + 1)) * 86400 * 1000);
+            return date.toISOString().split('T')[0];
         }
 
         function filterAndUpdateCharts() {
             const startDate = document.getElementById('startDate').value;
             const endDate = document.getElementById('endDate').value;
 
-            if (!startDate || !endDate) {
-                alert("Wprowadź poprawny zakres dat.");
-                return;
+            let data = JSON.parse(localStorage.getItem('usageData')) || [];
+
+            if (startDate && endDate) {
+                data = data.filter(entry => entry.date >= startDate && entry.date <= endDate);
             }
 
-            const data = JSON.parse(localStorage.getItem('usageData')) || [];
-            const filteredData = data.filter(entry => entry.date >= startDate && entry.date <= endDate);
-
-            if (filteredData.length === 0) {
-                alert("Brak danych w wybranym zakresie dat.");
-                return;
-            }
-
-            const allDates = Array.from(new Set(filteredData.map(entry => entry.date))).sort();
-            const dataMap = new Map(filteredData.map(entry => [entry.date, { gas: entry.gas, electricity: entry.electricity }]));
-
-            const gasData = [];
-            const electricityData = [];
-            const labels = [];
-
-            let prevGas = 0;
-            let prevElectricity = 0;
-
-            allDates.forEach(date => {
-                labels.push(date);
-                if (dataMap.has(date)) {
-                    const { gas, electricity } = dataMap.get(date);
-                    gasData.push(gas);
-                    electricityData.push(electricity);
-                    prevGas = gas;
-                    prevElectricity = electricity;
-                } else {
-                    gasData.push(prevGas);
-                    electricityData.push(prevElectricity);
-                }
-            });
-
-            const dailyGasUsage = [];
-            const dailyElectricityUsage = [];
-
-            for (let i = 1; i < gasData.length; i++) {
-                dailyGasUsage.push(gasData[i] - gasData[i - 1]);
-                dailyElectricityUsage.push(electricityData[i] - electricityData[i - 1]);
-            }
-
-            const filteredUsageChartCtx = document.getElementById('filteredUsageChart').getContext('2d');
-            new Chart(filteredUsageChartCtx, {
-                type: 'line',
-                data: {
-                    labels: labels,
-                    datasets: [
-                        {
-                            label: 'Zużycie gazu (przefiltrowane)',
-                            data: gasData,
-                            borderColor: 'rgba(255, 99, 132, 1)',
-                            backgroundColor: 'rgba(255, 99, 132, 0.2)',
-                            fill: true,
-                        },
-                        {
-                            label: 'Zużycie prądu (przefiltrowane)',
-                            data: electricityData,
-                            borderColor: 'rgba(54, 162, 235, 1)',
-                            backgroundColor: 'rgba(54, 162, 235, 0.2)',
-                            fill: true,
-                        }
-                    ]
-                },
-                options: {
-                    responsive: true,
-                    scales: {
-                        y: {
-                            beginAtZero: true
-                        },
-                        x: {
-                            display: true
-                        }
-                    }
-                }
-            });
-
-            const filteredDailyUsageChartCtx = document.getElementById('filteredDailyUsageChart').getContext('2d');
-            new Chart(filteredDailyUsageChartCtx, {
-                type: 'line',
-                data: {
-                    labels: labels.slice(1),
-                    datasets: [
-                        {
-                            label: 'Dzienne zużycie gazu (przefiltrowane)',
-                            data: dailyGasUsage,
-                            borderColor: 'rgba(255, 159, 64, 1)',
-                            backgroundColor: 'rgba(255, 159, 64, 0.2)',
-                            fill: true,
-                        },
-                        {
-                            label: 'Dzienne zużycie prądu (przefiltrowane)',
-                            data: dailyElectricityUsage,
-                            borderColor: 'rgba(75, 192, 192, 1)',
-                            backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                            fill: true,
-                        }
-                    ]
-                },
-                options: {
-                    responsive: true,
-                    scales: {
-                        y: {
-                            beginAtZero: true
-                        },
-                        x: {
-                            display: true
-                        }
-                    }
-                }
-            });
-
-            updateTable(filteredData, 'filteredDataTable');
+            updateCharts(data);
         }
 
-        function exportToPDF() {
-            const doc = new jsPDF();
-            doc.text("Tabela zużycia", 10, 10);
-
-            const table = document.querySelector('#dataTable table');
-            if (table) {
-                html2canvas(table).then(canvas => {
-                    const imgData = canvas.toDataURL('image/png');
-                    doc.addImage(imgData, 'PNG', 10, 20, 190, 0);
-                    doc.save('zuzycie.pdf');
-                });
-            } else {
-                doc.text("Brak danych do eksportu.", 10, 20);
-                doc.save('zuzycie.pdf');
-            }
-        }
-
-        window.onload = updateCharts;
+        document.addEventListener('DOMContentLoaded', () => {
+            loadCSVData();
+        });
     </script>
 </body>
 </html>
