--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>Monitorowanie zużycia gazu i prądu</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jspdf"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jspdf-autotable"></script>
     <style>
-        /* Stylowanie strony */
+        /* Ustawienia dla całego tła */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -18,6 +21,7 @@
             position: relative;
         }
 
+        /* Dodaj ciemny overlay z 50% przezroczystością */
         body::before {
             content: '';
             position: fixed;
@@ -26,13 +30,13 @@
             width: 100%;
             height: 100%;
             background-color: rgba(0, 0, 0, 0.5); /* 50% przyciemnienie */
-            z-index: -1;
+            z-index: -1; /* Umieść za treścią */
         }
 
         .container {
             max-width: 1000px;
             margin: 0 auto;
-            background-color: rgba(255, 255, 255, 0.8);
+            background-color: rgba(255, 255, 255, 0.8); /* Tło pod tekstem o 80% przejrzystości */
             padding: 20px;
         }
 
@@ -40,10 +44,19 @@
             margin-bottom: 1em;
         }
 
+        label {
+            display: block;
+            margin-bottom: 0.5em;
+        }
+
         input, button {
             width: 100%;
             padding: 0.5em;
             margin-bottom: 1em;
+        }
+
+        button {
+            padding: 0.5em 1em;
         }
 
         .buttons {
@@ -124,6 +137,7 @@
             <input type="date" id="endDate">
         </div>
         <button onclick="filterAndUpdateCharts()">Filtruj dane</button>
+        <button onclick="exportToPDF()">Eksportuj do PDF</button>
 
         <!-- Wykresy -->
         <h2>Wykres zużycia gazu i prądu</h2>
@@ -132,25 +146,24 @@
         <h2>Wykres dziennego zużycia gazu i prądu</h2>
         <canvas id="dailyUsageChart"></canvas>
 
+        <!-- Przefiltrowane wykresy -->
+        <h2>Wykres zużycia gazu i prądu (przefiltrowane)</h2>
+        <canvas id="filteredUsageChart"></canvas>
+
+        <h2>Wykres dziennego zużycia gazu i prądu (przefiltrowane)</h2>
+        <canvas id="filteredDailyUsageChart"></canvas>
+
         <!-- Tabele -->
         <h2>Tabela zużycia</h2>
         <div class="tables-container">
             <div class="table-wrapper" id="dataTable"></div>
+            <div class="table-wrapper" id="filteredDataTable"></div>
         </div>
     </div>
-
     <script>
-        async function loadCSVData() {
-            const response = await fetch('https://raw.githubusercontent.com/car0tek/liczniki/main/LICZNIKI%20(1).csv');
-            const csvData = await response.text();
-
-            const parsedData = csvData.split('\n').slice(1).map(row => {
-                const [date, gas, electricity] = row.split(',');
-                return { date, gas: parseFloat(gas), electricity: parseFloat(electricity) };
-            });
-
-            localStorage.setItem('usageData', JSON.stringify(parsedData));
-            updateCharts();
+        function excelDateToJSDate(excelDate) {
+            const date = new Date((excelDate - 25569) * 86400 * 1000);
+            return date.toISOString().split('T')[0];
         }
 
         function saveData() {
@@ -185,11 +198,13 @@
                 const workbook = XLSX.read(data, { type: 'array' });
 
                 const firstSheet = workbook.Sheets[workbook.SheetNames[0]];
-                const sheetData = XLSX.utils.sheet_to_json(firstSheet, { header: 1 });
+                const sheetData = XLSX.utils.sheet_to_csv(firstSheet, { header: 1, delimiter: ';' });
 
                 let usageData = JSON.parse(localStorage.getItem('usageData')) || [];
 
-                sheetData.slice(1).forEach(row => {
+                const rows = sheetData.split('\n').map(row => row.split(';'));
+                rows.forEach(row => {
+                    if (row.length < 3 || (row[0] === '' && row[1] === '' && row[2] === '')) return;
                     let [date, gas, electricity] = row;
                     if (typeof date === 'number') {
                         date = excelDateToJSDate(date);
@@ -216,7 +231,7 @@
             const gasData = [];
             const electricityData = [];
             const labels = [];
-
+            
             let prevGas = 0;
             let prevElectricity = 0;
 
@@ -234,98 +249,223 @@
                 }
             });
 
-            const dailyGasUsage = [];
-            const dailyElectricityUsage = [];
-
-            for (let i = 1; i < gasData.length; i++) {
-                dailyGasUsage.push(gasData[i] - gasData[i - 1]);
-                dailyElectricityUsage.push(electricityData[i] - electricityData[i - 1]);
-            }
-
-            const usageChartCtx = document.getElementById('usageChart').getContext('2d');
-            new Chart(usageChartCtx, {
+            const ctx = document.getElementById('usageChart').getContext('2d');
+            new Chart(ctx, {
                 type: 'line',
                 data: {
-                    labels: labels,
+                    labels,
                     datasets: [
                         {
                             label: 'Zużycie gazu',
                             data: gasData,
-                            borderColor: 'rgba(255, 99, 132, 1)',
-                            backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                            borderColor: 'rgba(75, 192, 192, 1)',
+                            backgroundColor: 'rgba(75, 192, 192, 0.2)',
                             fill: false,
                         },
                         {
                             label: 'Zużycie prądu',
                             data: electricityData,
-                            borderColor: 'rgba(54, 162, 235, 1)',
-                            backgroundColor: 'rgba(54, 162, 235, 0.2)',
+                            borderColor: 'rgba(153, 102, 255, 1)',
+                            backgroundColor: 'rgba(153, 102, 255, 0.2)',
                             fill: false,
                         }
                     ]
                 }
             });
 
-            const dailyUsageChartCtx = document.getElementById('dailyUsageChart').getContext('2d');
-            new Chart(dailyUsageChartCtx, {
-                type: 'bar',
+            const dailyGasData = [];
+            const dailyElectricityData = [];
+            const dailyLabels = [];
+
+            allDates.forEach(date => {
+                const dailyData = data.filter(entry => entry.date === date);
+                const dailyGasSum = dailyData.reduce((sum, entry) => sum + entry.gas, 0);
+                const dailyElectricitySum = dailyData.reduce((sum, entry) => sum + entry.electricity, 0);
+
+                dailyLabels.push(date);
+                dailyGasData.push(dailyGasSum);
+                dailyElectricityData.push(dailyElectricitySum);
+            });
+
+            const ctxDaily = document.getElementById('dailyUsageChart').getContext('2d');
+            new Chart(ctxDaily, {
+                type: 'line',
                 data: {
-                    labels: labels.slice(1),
+                    labels: dailyLabels,
                     datasets: [
                         {
                             label: 'Dzienne zużycie gazu',
-                            data: dailyGasUsage,
-                            borderColor: 'rgba(255, 159, 64, 1)',
-                            backgroundColor: 'rgba(255, 159, 64, 0.2)',
+                            data: dailyGasData,
+                            borderColor: 'rgba(75, 192, 192, 1)',
+                            backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                            fill: false,
                         },
                         {
                             label: 'Dzienne zużycie prądu',
-                            data: dailyElectricityUsage,
-                            borderColor: 'rgba(75, 192, 192, 1)',
-                            backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                            data: dailyElectricityData,
+                            borderColor: 'rgba(153, 102, 255, 1)',
+                            backgroundColor: 'rgba(153, 102, 255, 0.2)',
+                            fill: false,
                         }
                     ]
                 }
             });
 
-            const tableContainer = document.getElementById('dataTable');
-            tableContainer.innerHTML = generateTableHTML(data);
+            const ctxFiltered = document.getElementById('filteredUsageChart').getContext('2d');
+            const ctxFilteredDaily = document.getElementById('filteredDailyUsageChart').getContext('2d');
+
+            const filteredData = data.filter(entry => {
+                const startDate = new Date(document.getElementById('startDate').value);
+                const endDate = new Date(document.getElementById('endDate').value);
+                const entryDate = new Date(entry.date);
+                return entryDate >= startDate && entryDate <= endDate;
+            });
+
+            const filteredDates = Array.from(new Set(filteredData.map(entry => entry.date))).sort();
+            const filteredDataMap = new Map(filteredData.map(entry => [entry.date, { gas: entry.gas, electricity: entry.electricity }]));
+
+            const filteredGasData = [];
+            const filteredElectricityData = [];
+            const filteredLabels = [];
+
+            let prevFilteredGas = 0;
+            let prevFilteredElectricity = 0;
+
+            filteredDates.forEach(date => {
+                filteredLabels.push(date);
+                if (filteredDataMap.has(date)) {
+                    const { gas, electricity } = filteredDataMap.get(date);
+                    filteredGasData.push(gas);
+                    filteredElectricityData.push(electricity);
+                    prevFilteredGas = gas;
+                    prevFilteredElectricity = electricity;
+                } else {
+                    filteredGasData.push(prevFilteredGas);
+                    filteredElectricityData.push(prevFilteredElectricity);
+                }
+            });
+
+            new Chart(ctxFiltered, {
+                type: 'line',
+                data: {
+                    labels: filteredLabels,
+                    datasets: [
+                        {
+                            label: 'Zużycie gazu (przefiltrowane)',
+                            data: filteredGasData,
+                            borderColor: 'rgba(75, 192, 192, 1)',
+                            backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                            fill: false,
+                        },
+                        {
+                            label: 'Zużycie prądu (przefiltrowane)',
+                            data: filteredElectricityData,
+                            borderColor: 'rgba(153, 102, 255, 1)',
+                            backgroundColor: 'rgba(153, 102, 255, 0.2)',
+                            fill: false,
+                        }
+                    ]
+                }
+            });
+
+            const filteredDailyGasData = [];
+            const filteredDailyElectricityData = [];
+            const filteredDailyLabels = [];
+
+            filteredDates.forEach(date => {
+                const dailyFilteredData = filteredData.filter(entry => entry.date === date);
+                const dailyFilteredGasSum = dailyFilteredData.reduce((sum, entry) => sum + entry.gas, 0);
+                const dailyFilteredElectricitySum = dailyFilteredData.reduce((sum, entry) => sum + entry.electricity, 0);
+
+                filteredDailyLabels.push(date);
+                filteredDailyGasData.push(dailyFilteredGasSum);
+                filteredDailyElectricityData.push(dailyFilteredElectricitySum);
+            });
+
+            new Chart(ctxFilteredDaily, {
+                type: 'line',
+                data: {
+                    labels: filteredDailyLabels,
+                    datasets: [
+                        {
+                            label: 'Dzienne zużycie gazu (przefiltrowane)',
+                            data: filteredDailyGasData,
+                            borderColor: 'rgba(75, 192, 192, 1)',
+                            backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                            fill: false,
+                        },
+                        {
+                            label: 'Dzienne zużycie prądu (przefiltrowane)',
+                            data: filteredDailyElectricityData,
+                            borderColor: 'rgba(153, 102, 255, 1)',
+                            backgroundColor: 'rgba(153, 102, 255, 0.2)',
+                            fill: false,
+                        }
+                    ]
+                }
+            });
+
+            updateTable('dataTable', data);
+            updateTable('filteredDataTable', filteredData);
         }
 
-        function generateTableHTML(data) {
-            let tableHTML = '<table><thead><tr><th>Data</th><th>Stan licznika gazu</th><th>Stan licznika prądu</th><th>Dzienne zużycie gazu</th><th>Dzienne zużycie prądu</th></tr></thead><tbody>';
-            for (let i = 0; i < data.length; i++) {
-                const prevData = data[i - 1] || { gas: 0, electricity: 0 };
-                const dailyGasUsage = data[i].gas - prevData.gas;
-                const dailyElectricityUsage = data[i].electricity - prevData.electricity;
+        function updateTable(tableId, data) {
+            const tableContainer = document.getElementById(tableId);
+            tableContainer.innerHTML = '';
 
-                tableHTML += `<tr><td>${data[i].date}</td><td>${data[i].gas}</td><td>${data[i].electricity}</td><td>${dailyGasUsage}</td><td>${dailyElectricityUsage}</td></tr>`;
+            if (data.length === 0) {
+                tableContainer.innerHTML = '<p>Brak danych do wyświetlenia.</p>';
+                return;
             }
-            tableHTML += '</tbody></table>';
-            return tableHTML;
+
+            const table = document.createElement('table');
+            const headerRow = document.createElement('tr');
+            ['Data', 'Stan licznika gazu', 'Stan licznika prądu'].forEach(text => {
+                const th = document.createElement('th');
+                th.textContent = text;
+                headerRow.appendChild(th);
+            });
+            table.appendChild(headerRow);
+
+            data.forEach(entry => {
+                const row = document.createElement('tr');
+                const dateCell = document.createElement('td');
+                dateCell.textContent = entry.date;
+                row.appendChild(dateCell);
+
+                const gasCell = document.createElement('td');
+                gasCell.textContent = entry.gas;
+                row.appendChild(gasCell);
+
+                const electricityCell = document.createElement('td');
+                electricityCell.textContent = entry.electricity;
+                row.appendChild(electricityCell);
+
+                table.appendChild(row);
+            });
+
+            tableContainer.appendChild(table);
         }
 
-        function excelDateToJSDate(excelDate) {
-            const date = new Date((excelDate - (25567 + 1)) * 86400 * 1000);
-            return date.toISOString().split('T')[0];
+        function exportToPDF() {
+            const doc = new jsPDF();
+
+            doc.text('Zużycie gazu i prądu', 10, 10);
+
+            const tables = ['dataTable', 'filteredDataTable'];
+            tables.forEach((tableId, index) => {
+                const tableElement = document.getElementById(tableId).querySelector('table');
+                if (tableElement) {
+                    html2canvas(tableElement).then(canvas => {
+                        const imgData = canvas.toDataURL('image/png');
+                        doc.addImage(imgData, 'PNG', 10, 20 + (index * 150), 180, 0);
+                        if (index === tables.length - 1) {
+                            doc.save('dane.pdf');
+                        }
+                    });
+                }
+            });
         }
-
-        function filterAndUpdateCharts() {
-            const startDate = document.getElementById('startDate').value;
-            const endDate = document.getElementById('endDate').value;
-
-            let data = JSON.parse(localStorage.getItem('usageData')) || [];
-
-            if (startDate && endDate) {
-                data = data.filter(entry => entry.date >= startDate && entry.date <= endDate);
-            }
-
-            updateCharts(data);
-        }
-
-        document.addEventListener('DOMContentLoaded', () => {
-            loadCSVData();
-        });
     </script>
 </body>
 </html>
